y.output
Terminals unused in grammar

   ','


State 125 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: %empty

    2 Program: $@1 StatementList

    3 StatementList: StatementList Statement
    4              | Statement

    5 Type: TypeName
    6     | ArrayType

    7 TypeName: INT
    8         | FLOAT
    9         | STRING
   10         | BOOL

   11 ArrayType: '[' Expression ']' Type

   12 Expression: UnaryExpr
   13           | '"' Expression '"'
   14           | Expression '+' Expression
   15           | Expression '-' Expression
   16           | Expression '*' Expression
   17           | Expression '/' Expression
   18           | Expression '%' Expression
   19           | Expression EQL Expression
   20           | Expression NEQ Expression
   21           | Expression '<' Expression
   22           | Expression LEQ Expression
   23           | Expression '>' Expression
   24           | Expression GEQ Expression
   25           | Expression LOR Expression
   26           | Expression LAND Expression

   27 UnaryExpr: PrimaryExpr
   28          | unary_op UnaryExpr

   29 unary_op: '+'
   30         | '-'
   31         | '!'

   32 PrimaryExpr: Operand
   33            | IndexExpr
   34            | ConversionExpr

   35 Operand: INT_LIT
   36        | FLOAT_LIT
   37        | TRUE
   38        | FALSE
   39        | STRING_LIT
   40        | ID
   41        | '(' Expression ')'

   42 IndexExpr: PrimaryExpr '[' Expression ']'

   43 $@2: %empty

   44 ConversionExpr: Type '(' $@2 Expression ')'

   45 Statement: DeclarationStmt NEWLINE
   46          | SimpleStmt NEWLINE
   47          | Block NEWLINE
   48          | IfStmt NEWLINE
   49          | ForStmt NEWLINE
   50          | PrintStmt NEWLINE
   51          | NEWLINE

   52 SimpleStmt: AssignmentStmt
   53           | ExpressionStmt
   54           | IncDecStmt

   55 DeclarationStmt: VAR ID Type
   56                | VAR ID Type '=' Expression

   57 $@3: %empty

   58 AssignmentStmt: Expression '=' $@3 Expression

   59 $@4: %empty

   60 AssignmentStmt: Expression ADD_ASSIGN $@4 Expression

   61 $@5: %empty

   62 AssignmentStmt: Expression SUB_ASSIGN $@5 Expression

   63 $@6: %empty

   64 AssignmentStmt: Expression MUL_ASSIGN $@6 Expression

   65 $@7: %empty

   66 AssignmentStmt: Expression QUO_ASSIGN $@7 Expression

   67 $@8: %empty

   68 AssignmentStmt: Expression REM_ASSIGN $@8 Expression

   69 ExpressionStmt: Expression

   70 IncDecStmt: Expression INC
   71           | Expression DEC

   72 $@9: %empty

   73 Block: '{' $@9 StatementList '}'

   74 $@10: %empty

   75 IfStmt: IF Condition $@10 Block
   76       | IfStmt ELSE IfStmt
   77       | IfStmt ELSE Block

   78 Condition: Expression

   79 $@11: %empty

   80 $@12: %empty

   81 ForStmt: FOR $@11 ForClause $@12 Block

   82 ForClause: Condition

   83 $@13: %empty

   84 $@14: %empty

   85 ForClause: InitStmt ';' $@13 Condition ';' $@14 PostStmt

   86 InitStmt: SimpleStmt

   87 PostStmt: SimpleStmt

   88 $@15: %empty

   89 PrintStmt: PRINT $@15 '(' Expression ')'

   90 $@16: %empty

   91 PrintStmt: PRINTLN $@16 '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'"' (34) 13
'%' (37) 18
'(' (40) 41 44 89 91
')' (41) 41 44 89 91
'*' (42) 16
'+' (43) 14 29
',' (44)
'-' (45) 15 30
'/' (47) 17
';' (59) 85
'<' (60) 21
'=' (61) 56 58
'>' (62) 23
'[' (91) 11 42
']' (93) 11 42
'{' (123) 73
'}' (125) 73
error (256)
VAR (258) 55 56
NEWLINE (259) 45 46 47 48 49 50 51
IF (260) 75
ELSE (261) 76 77
FOR (262) 81
INT (263) 7
FLOAT (264) 8
BOOL (265) 10
STRING (266) 9
ID (267) 40 55 56
INT_LIT (268) 35
FLOAT_LIT (269) 36
TRUE (270) 37
FALSE (271) 38
STRING_LIT (272) 39
ADD_ASSIGN (273) 60
SUB_ASSIGN (274) 62
MUL_ASSIGN (275) 64
QUO_ASSIGN (276) 66
REM_ASSIGN (277) 68
INC (278) 70
DEC (279) 71
GEQ (280) 24
LEQ (281) 22
EQL (282) 19
NEQ (283) 20
LAND (284) 26
LOR (285) 25
PRINT (286) 89
PRINTLN (287) 91


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 2, on right: 0
$@1 (53)
    on left: 1, on right: 2
StatementList (54)
    on left: 3 4, on right: 2 3 73
Type (55)
    on left: 5 6, on right: 11 44 55 56
TypeName (56)
    on left: 7 8 9 10, on right: 5
ArrayType (57)
    on left: 11, on right: 6
Expression (58)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26, on right:
    11 13 14 15 16 17 18 19 20 21 22 23 24 25 26 41 42 44 56 58 60
    62 64 66 68 69 70 71 78 89 91
UnaryExpr (59)
    on left: 27 28, on right: 12 28
unary_op (60)
    on left: 29 30 31, on right: 28
PrimaryExpr (61)
    on left: 32 33 34, on right: 27 42
Operand (62)
    on left: 35 36 37 38 39 40 41, on right: 32
IndexExpr (63)
    on left: 42, on right: 33
ConversionExpr (64)
    on left: 44, on right: 34
$@2 (65)
    on left: 43, on right: 44
Statement (66)
    on left: 45 46 47 48 49 50 51, on right: 3 4
SimpleStmt (67)
    on left: 52 53 54, on right: 46 86 87
DeclarationStmt (68)
    on left: 55 56, on right: 45
AssignmentStmt (69)
    on left: 58 60 62 64 66 68, on right: 52
$@3 (70)
    on left: 57, on right: 58
$@4 (71)
    on left: 59, on right: 60
$@5 (72)
    on left: 61, on right: 62
$@6 (73)
    on left: 63, on right: 64
$@7 (74)
    on left: 65, on right: 66
$@8 (75)
    on left: 67, on right: 68
ExpressionStmt (76)
    on left: 69, on right: 53
IncDecStmt (77)
    on left: 70 71, on right: 54
Block (78)
    on left: 73, on right: 47 75 77 81
$@9 (79)
    on left: 72, on right: 73
IfStmt (80)
    on left: 75 76 77, on right: 48 76 77
$@10 (81)
    on left: 74, on right: 75
Condition (82)
    on left: 78, on right: 75 82 85
ForStmt (83)
    on left: 81, on right: 49
$@11 (84)
    on left: 79, on right: 81
$@12 (85)
    on left: 80, on right: 81
ForClause (86)
    on left: 82 85, on right: 81
$@13 (87)
    on left: 83, on right: 85
$@14 (88)
    on left: 84, on right: 85
InitStmt (89)
    on left: 86, on right: 85
PostStmt (90)
    on left: 87, on right: 85
PrintStmt (91)
    on left: 89 91, on right: 50
$@15 (92)
    on left: 88, on right: 89
$@16 (93)
    on left: 90, on right: 91


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 . StatementList

    VAR         shift, and go to state 4
    '('         shift, and go to state 5
    '['         shift, and go to state 6
    '{'         shift, and go to state 7
    NEWLINE     shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    '"'         shift, and go to state 26

    StatementList    go to state 27
    Type             go to state 28
    TypeName         go to state 29
    ArrayType        go to state 30
    Expression       go to state 31
    UnaryExpr        go to state 32
    unary_op         go to state 33
    PrimaryExpr      go to state 34
    Operand          go to state 35
    IndexExpr        go to state 36
    ConversionExpr   go to state 37
    Statement        go to state 38
    SimpleStmt       go to state 39
    DeclarationStmt  go to state 40
    AssignmentStmt   go to state 41
    ExpressionStmt   go to state 42
    IncDecStmt       go to state 43
    Block            go to state 44
    IfStmt           go to state 45
    ForStmt          go to state 46
    PrintStmt        go to state 47


State 3

    0 $accept: Program $end .

    $default  accept


State 4

   55 DeclarationStmt: VAR . ID Type
   56                | VAR . ID Type '=' Expression

    ID  shift, and go to state 48


State 5

   41 Operand: '(' . Expression ')'

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 49
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 6

   11 ArrayType: '[' . Expression ']' Type

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 50
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 7

   73 Block: '{' . $@9 StatementList '}'

    $default  reduce using rule 72 ($@9)

    $@9  go to state 51


State 8

   51 Statement: NEWLINE .

    $default  reduce using rule 51 (Statement)


State 9

   75 IfStmt: IF . Condition $@10 Block

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 52
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37
    Condition       go to state 53


State 10

   81 ForStmt: FOR . $@11 ForClause $@12 Block

    $default  reduce using rule 79 ($@11)

    $@11  go to state 54


State 11

    7 TypeName: INT .

    $default  reduce using rule 7 (TypeName)


State 12

    8 TypeName: FLOAT .

    $default  reduce using rule 8 (TypeName)


State 13

   10 TypeName: BOOL .

    $default  reduce using rule 10 (TypeName)


State 14

    9 TypeName: STRING .

    $default  reduce using rule 9 (TypeName)


State 15

   40 Operand: ID .

    $default  reduce using rule 40 (Operand)


State 16

   35 Operand: INT_LIT .

    $default  reduce using rule 35 (Operand)


State 17

   36 Operand: FLOAT_LIT .

    $default  reduce using rule 36 (Operand)


State 18

   37 Operand: TRUE .

    $default  reduce using rule 37 (Operand)


State 19

   38 Operand: FALSE .

    $default  reduce using rule 38 (Operand)


State 20

   39 Operand: STRING_LIT .

    $default  reduce using rule 39 (Operand)


State 21

   29 unary_op: '+' .

    $default  reduce using rule 29 (unary_op)


State 22

   30 unary_op: '-' .

    $default  reduce using rule 30 (unary_op)


State 23

   31 unary_op: '!' .

    $default  reduce using rule 31 (unary_op)


State 24

   89 PrintStmt: PRINT . $@15 '(' Expression ')'

    $default  reduce using rule 88 ($@15)

    $@15  go to state 55


State 25

   91 PrintStmt: PRINTLN . $@16 '(' Expression ')'

    $default  reduce using rule 90 ($@16)

    $@16  go to state 56


State 26

   13 Expression: '"' . Expression '"'

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 57
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 27

    2 Program: $@1 StatementList .
    3 StatementList: StatementList . Statement

    VAR         shift, and go to state 4
    '('         shift, and go to state 5
    '['         shift, and go to state 6
    '{'         shift, and go to state 7
    NEWLINE     shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    '"'         shift, and go to state 26

    $default  reduce using rule 2 (Program)

    Type             go to state 28
    TypeName         go to state 29
    ArrayType        go to state 30
    Expression       go to state 31
    UnaryExpr        go to state 32
    unary_op         go to state 33
    PrimaryExpr      go to state 34
    Operand          go to state 35
    IndexExpr        go to state 36
    ConversionExpr   go to state 37
    Statement        go to state 58
    SimpleStmt       go to state 39
    DeclarationStmt  go to state 40
    AssignmentStmt   go to state 41
    ExpressionStmt   go to state 42
    IncDecStmt       go to state 43
    Block            go to state 44
    IfStmt           go to state 45
    ForStmt          go to state 46
    PrintStmt        go to state 47


State 28

   44 ConversionExpr: Type . '(' $@2 Expression ')'

    '('  shift, and go to state 59


State 29

    5 Type: TypeName .

    $default  reduce using rule 5 (Type)


State 30

    6 Type: ArrayType .

    $default  reduce using rule 6 (Type)


State 31

   14 Expression: Expression . '+' Expression
   15           | Expression . '-' Expression
   16           | Expression . '*' Expression
   17           | Expression . '/' Expression
   18           | Expression . '%' Expression
   19           | Expression . EQL Expression
   20           | Expression . NEQ Expression
   21           | Expression . '<' Expression
   22           | Expression . LEQ Expression
   23           | Expression . '>' Expression
   24           | Expression . GEQ Expression
   25           | Expression . LOR Expression
   26           | Expression . LAND Expression
   58 AssignmentStmt: Expression . '=' $@3 Expression
   60               | Expression . ADD_ASSIGN $@4 Expression
   62               | Expression . SUB_ASSIGN $@5 Expression
   64               | Expression . MUL_ASSIGN $@6 Expression
   66               | Expression . QUO_ASSIGN $@7 Expression
   68               | Expression . REM_ASSIGN $@8 Expression
   69 ExpressionStmt: Expression .
   70 IncDecStmt: Expression . INC
   71           | Expression . DEC

    '='         shift, and go to state 60
    ADD_ASSIGN  shift, and go to state 61
    SUB_ASSIGN  shift, and go to state 62
    MUL_ASSIGN  shift, and go to state 63
    QUO_ASSIGN  shift, and go to state 64
    REM_ASSIGN  shift, and go to state 65
    '+'         shift, and go to state 66
    '-'         shift, and go to state 67
    '*'         shift, and go to state 68
    '/'         shift, and go to state 69
    '%'         shift, and go to state 70
    INC         shift, and go to state 71
    DEC         shift, and go to state 72
    '>'         shift, and go to state 73
    '<'         shift, and go to state 74
    GEQ         shift, and go to state 75
    LEQ         shift, and go to state 76
    EQL         shift, and go to state 77
    NEQ         shift, and go to state 78
    LAND        shift, and go to state 79
    LOR         shift, and go to state 80

    $default  reduce using rule 69 (ExpressionStmt)


State 32

   12 Expression: UnaryExpr .

    $default  reduce using rule 12 (Expression)


State 33

   28 UnaryExpr: unary_op . UnaryExpr

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    UnaryExpr       go to state 81
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 34

   27 UnaryExpr: PrimaryExpr .
   42 IndexExpr: PrimaryExpr . '[' Expression ']'

    '['  shift, and go to state 82

    $default  reduce using rule 27 (UnaryExpr)


State 35

   32 PrimaryExpr: Operand .

    $default  reduce using rule 32 (PrimaryExpr)


State 36

   33 PrimaryExpr: IndexExpr .

    $default  reduce using rule 33 (PrimaryExpr)


State 37

   34 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 34 (PrimaryExpr)


State 38

    4 StatementList: Statement .

    $default  reduce using rule 4 (StatementList)


State 39

   46 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 83


State 40

   45 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 84


State 41

   52 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 52 (SimpleStmt)


State 42

   53 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 53 (SimpleStmt)


State 43

   54 SimpleStmt: IncDecStmt .

    $default  reduce using rule 54 (SimpleStmt)


State 44

   47 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 85


State 45

   48 Statement: IfStmt . NEWLINE
   76 IfStmt: IfStmt . ELSE IfStmt
   77       | IfStmt . ELSE Block

    NEWLINE  shift, and go to state 86
    ELSE     shift, and go to state 87


State 46

   49 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 88


State 47

   50 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 89


State 48

   55 DeclarationStmt: VAR ID . Type
   56                | VAR ID . Type '=' Expression

    '['     shift, and go to state 6
    INT     shift, and go to state 11
    FLOAT   shift, and go to state 12
    BOOL    shift, and go to state 13
    STRING  shift, and go to state 14

    Type       go to state 90
    TypeName   go to state 29
    ArrayType  go to state 30


State 49

   14 Expression: Expression . '+' Expression
   15           | Expression . '-' Expression
   16           | Expression . '*' Expression
   17           | Expression . '/' Expression
   18           | Expression . '%' Expression
   19           | Expression . EQL Expression
   20           | Expression . NEQ Expression
   21           | Expression . '<' Expression
   22           | Expression . LEQ Expression
   23           | Expression . '>' Expression
   24           | Expression . GEQ Expression
   25           | Expression . LOR Expression
   26           | Expression . LAND Expression
   41 Operand: '(' Expression . ')'

    ')'   shift, and go to state 91
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '%'   shift, and go to state 70
    '>'   shift, and go to state 73
    '<'   shift, and go to state 74
    GEQ   shift, and go to state 75
    LEQ   shift, and go to state 76
    EQL   shift, and go to state 77
    NEQ   shift, and go to state 78
    LAND  shift, and go to state 79
    LOR   shift, and go to state 80


State 50

   11 ArrayType: '[' Expression . ']' Type
   14 Expression: Expression . '+' Expression
   15           | Expression . '-' Expression
   16           | Expression . '*' Expression
   17           | Expression . '/' Expression
   18           | Expression . '%' Expression
   19           | Expression . EQL Expression
   20           | Expression . NEQ Expression
   21           | Expression . '<' Expression
   22           | Expression . LEQ Expression
   23           | Expression . '>' Expression
   24           | Expression . GEQ Expression
   25           | Expression . LOR Expression
   26           | Expression . LAND Expression

    ']'   shift, and go to state 92
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '%'   shift, and go to state 70
    '>'   shift, and go to state 73
    '<'   shift, and go to state 74
    GEQ   shift, and go to state 75
    LEQ   shift, and go to state 76
    EQL   shift, and go to state 77
    NEQ   shift, and go to state 78
    LAND  shift, and go to state 79
    LOR   shift, and go to state 80


State 51

   73 Block: '{' $@9 . StatementList '}'

    VAR         shift, and go to state 4
    '('         shift, and go to state 5
    '['         shift, and go to state 6
    '{'         shift, and go to state 7
    NEWLINE     shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    '"'         shift, and go to state 26

    StatementList    go to state 93
    Type             go to state 28
    TypeName         go to state 29
    ArrayType        go to state 30
    Expression       go to state 31
    UnaryExpr        go to state 32
    unary_op         go to state 33
    PrimaryExpr      go to state 34
    Operand          go to state 35
    IndexExpr        go to state 36
    ConversionExpr   go to state 37
    Statement        go to state 38
    SimpleStmt       go to state 39
    DeclarationStmt  go to state 40
    AssignmentStmt   go to state 41
    ExpressionStmt   go to state 42
    IncDecStmt       go to state 43
    Block            go to state 44
    IfStmt           go to state 45
    ForStmt          go to state 46
    PrintStmt        go to state 47


State 52

   14 Expression: Expression . '+' Expression
   15           | Expression . '-' Expression
   16           | Expression . '*' Expression
   17           | Expression . '/' Expression
   18           | Expression . '%' Expression
   19           | Expression . EQL Expression
   20           | Expression . NEQ Expression
   21           | Expression . '<' Expression
   22           | Expression . LEQ Expression
   23           | Expression . '>' Expression
   24           | Expression . GEQ Expression
   25           | Expression . LOR Expression
   26           | Expression . LAND Expression
   78 Condition: Expression .

    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '%'   shift, and go to state 70
    '>'   shift, and go to state 73
    '<'   shift, and go to state 74
    GEQ   shift, and go to state 75
    LEQ   shift, and go to state 76
    EQL   shift, and go to state 77
    NEQ   shift, and go to state 78
    LAND  shift, and go to state 79
    LOR   shift, and go to state 80

    $default  reduce using rule 78 (Condition)


State 53

   75 IfStmt: IF Condition . $@10 Block

    $default  reduce using rule 74 ($@10)

    $@10  go to state 94


State 54

   81 ForStmt: FOR $@11 . ForClause $@12 Block

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 95
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37
    SimpleStmt      go to state 96
    AssignmentStmt  go to state 41
    ExpressionStmt  go to state 42
    IncDecStmt      go to state 43
    Condition       go to state 97
    ForClause       go to state 98
    InitStmt        go to state 99


State 55

   89 PrintStmt: PRINT $@15 . '(' Expression ')'

    '('  shift, and go to state 100


State 56

   91 PrintStmt: PRINTLN $@16 . '(' Expression ')'

    '('  shift, and go to state 101


State 57

   13 Expression: '"' Expression . '"'
   14           | Expression . '+' Expression
   15           | Expression . '-' Expression
   16           | Expression . '*' Expression
   17           | Expression . '/' Expression
   18           | Expression . '%' Expression
   19           | Expression . EQL Expression
   20           | Expression . NEQ Expression
   21           | Expression . '<' Expression
   22           | Expression . LEQ Expression
   23           | Expression . '>' Expression
   24           | Expression . GEQ Expression
   25           | Expression . LOR Expression
   26           | Expression . LAND Expression

    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '%'   shift, and go to state 70
    '>'   shift, and go to state 73
    '<'   shift, and go to state 74
    GEQ   shift, and go to state 75
    LEQ   shift, and go to state 76
    EQL   shift, and go to state 77
    NEQ   shift, and go to state 78
    LAND  shift, and go to state 79
    LOR   shift, and go to state 80
    '"'   shift, and go to state 102


State 58

    3 StatementList: StatementList Statement .

    $default  reduce using rule 3 (StatementList)


State 59

   44 ConversionExpr: Type '(' . $@2 Expression ')'

    $default  reduce using rule 43 ($@2)

    $@2  go to state 103


State 60

   58 AssignmentStmt: Expression '=' . $@3 Expression

    $default  reduce using rule 57 ($@3)

    $@3  go to state 104


State 61

   60 AssignmentStmt: Expression ADD_ASSIGN . $@4 Expression

    $default  reduce using rule 59 ($@4)

    $@4  go to state 105


State 62

   62 AssignmentStmt: Expression SUB_ASSIGN . $@5 Expression

    $default  reduce using rule 61 ($@5)

    $@5  go to state 106


State 63

   64 AssignmentStmt: Expression MUL_ASSIGN . $@6 Expression

    $default  reduce using rule 63 ($@6)

    $@6  go to state 107


State 64

   66 AssignmentStmt: Expression QUO_ASSIGN . $@7 Expression

    $default  reduce using rule 65 ($@7)

    $@7  go to state 108


State 65

   68 AssignmentStmt: Expression REM_ASSIGN . $@8 Expression

    $default  reduce using rule 67 ($@8)

    $@8  go to state 109


State 66

   14 Expression: Expression '+' . Expression

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 110
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 67

   15 Expression: Expression '-' . Expression

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 111
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 68

   16 Expression: Expression '*' . Expression

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 112
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 69

   17 Expression: Expression '/' . Expression

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 113
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 70

   18 Expression: Expression '%' . Expression

    '('         shift, and go to state 5
    '['         shift, and go to state 6
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    ID          shift, and go to state 15
    INT_LIT     shift, and go to state 16
    FLOAT_LIT   shift, and go to state 17
    TRUE        shift, and go to state 18
    FALSE       shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    '+'         shift, and go to state 21
    '-'         shift, and go to state 22
    '!'         shift, and go to state 23
    '"'         shift, and go to state 26

    Type            go to state 28
    TypeName        go to state 29
    ArrayType       go to state 30
    Expression      go to state 114
    UnaryExpr       go to state 32
    unary_op        go to state 33
    PrimaryExpr     go to state 34
    Operand         go to state 35
    IndexExpr       go to state 36
    ConversionExpr  go to state 37


State 71

   70 IncDecStmt: Expression INC .

    $default  reduce using rule 70 (IncDecStmt)
